- Fixed layout issue of portfolio
- fixed 4 column issue on google grid gallery by
editing component.css {changed grid column from 25% to 33.33%}

--- a/app/styles/component.css
+++ b/app/styles/component.css
@@ -46,7 +46,7 @@
 }
 
 .grid li {
-	width: 25%;
+	width: 33.33%;
 	float: left;
 	cursor: pointer;
 }
